fixed navigation z-index

--- a/public/views/global-components/navigation/nav.css
+++ b/public/views/global-components/navigation/nav.css
@@ -87,6 +87,7 @@ nav {
   background: black;
   padding: 10px 0px 10px 10px;
   pointer-events: none;
+  z-index: 999;
 }
 
 .contact-submenu {
